--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -300,6 +300,7 @@
     <Content Include="resources\imdages copy.png" />
     <Content Include="resources\ismages copy.png" />
     <None Include="resources\learning-prv.png" />
+    <None Include="resources\Luulai.ico" />
     <Content Include="resources\notus-icon.png" />
     <None Include="resources\phuchoi.png" />
     <Content Include="resources\picture1_02.gif" />
