--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -296,6 +296,7 @@
     <Content Include="resources\education-edutainment-2.png" />
     <None Include="resources\Employee Add copy.png" />
     <None Include="resources\exit.png" />
+    <None Include="resources\good-result-md.png" />
     <Content Include="resources\HuongDan.png" />
     <None Include="resources\Huybo.ico" />
     <Content Include="resources\imagdes copy.png" />
