--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -396,6 +396,7 @@
     <None Include="resources\line_horizal.png" />
     <None Include="resources\luuchuyenlop.png" />
     <None Include="resources\log.png" />
+    <Content Include="resources\log-2.png" />
     <Content Include="resources\notus-icon.png" />
     <None Include="resources\phuchoi.png" />
     <Content Include="resources\picture1_02.gif" />
