--- a/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
+++ b/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BAOCAO_BUS.cs" />
+    <Compile Include="clsBAOCAO_BUS.cs" />
     <Compile Include="clsHANHKIEM_BUS.cs" />
     <Compile Include="clsHOCKY_BUS.cs" />
     <Compile Include="clsLOAIHANHKIEM_BUS.cs" />
