--- a/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
+++ b/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsBAOCAO_DTO.cs" />
     <Compile Include="clsDIEM_DTO.cs" />
     <Compile Include="clsGIANGDAY_DTO.cs" />
     <Compile Include="clsGIAOVIEN_DTO.cs" />
