--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -211,10 +211,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="report\DiemTheoMonHoc.cs">
+    <Compile Include="report\BangDiemHocSinh.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DiemTheoMonHoc.rpt</DependentUpon>
+      <DependentUpon>BangDiemHocSinh.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="report\DSGiaoVien.cs">
@@ -247,17 +247,17 @@
       <DependentUpon>LuuBan.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="report\rptHocBa.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>rptHocBa.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="report\theHocSinh.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>theHocSinh.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Testdulieu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testdulieu.Designer.cs">
+      <DependentUpon>Testdulieu.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
@@ -347,9 +347,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="report\DiemTheoMonHoc.rpt">
+    <EmbeddedResource Include="report\BangDiemHocSinh.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>DiemTheoMonHoc.cs</LastGenOutput>
+      <LastGenOutput>BangDiemHocSinh.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="report\DSGiaoVien.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -371,13 +371,12 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>LuuBan.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="report\rptHocBa.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>rptHocBa.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="report\theHocSinh.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>theHocSinh.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Testdulieu.resx">
+      <DependentUpon>Testdulieu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
