--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -279,6 +279,7 @@
     </Compile>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmBaoCaoChung.resx">
       <DependentUpon>frmBaoCaoChung.cs</DependentUpon>
@@ -488,6 +489,7 @@
     <Content Include="resources\log-2.png" />
     <Content Include="resources\notus-icon.png" />
     <None Include="resources\phuchoi.png" />
+    <None Include="resources\no_image_found.jpg" />
     <Content Include="resources\picture1_02.gif" />
     <Content Include="resources\picture1_03.gif" />
     <Content Include="resources\picture2.gif" />
