--- a/QuanLiHocSinh/QLHS.DAO/QLHS.DAO.csproj
+++ b/QuanLiHocSinh/QLHS.DAO/QLHS.DAO.csproj
@@ -31,6 +31,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -54,8 +56,15 @@
     <Compile Include="clsMONHOC_DAO.cs" />
     <Compile Include="clsNAMHOC_DAO.cs" />
     <Compile Include="clsNGUOIDUNG_DAO.cs" />
+    <Compile Include="DataService.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DataService.Designer.cs">
+      <DependentUpon>DataService.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="clsQUYDINH_DAO.cs" />
+    <Compile Include="XML.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLHS.DTO\QLHS.DTO.csproj">
