--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -459,6 +459,49 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="resources\348527.png" />
+    <None Include="resources\3485271.png" />
+    <None Include="resources\37.png" />
+    <None Include="resources\39.png" />
+    <None Include="resources\902759421.png" />
+    <None Include="resources\add.png" />
+    <None Include="resources\backGround.png" />
+    <None Include="resources\baoCaoDiem.jpg" />
+    <None Include="resources\Chonanh.ico" />
+    <None Include="resources\chuyenlop.png" />
+    <None Include="resources\closephanlop.png" />
+    <None Include="resources\connection.png" />
+    <None Include="resources\danhsach.ico" />
+    <None Include="resources\delete.png" />
+    <None Include="resources\diemBC.png" />
+    <None Include="resources\Dongy.ico" />
+    <None Include="resources\Employee Add copy.png" />
+    <None Include="resources\exit.png" />
+    <None Include="resources\good-result-md.png" />
+    <None Include="resources\Huybo.ico" />
+    <None Include="resources\learning-prv.png" />
+    <None Include="resources\line_horizal.png" />
+    <None Include="resources\line_right.png" />
+    <None Include="resources\log.png" />
+    <None Include="resources\luuchuyenlop.png" />
+    <None Include="resources\Luulai.ico" />
+    <None Include="resources\no_image_found.jpg" />
+    <None Include="resources\phuchoi.png" />
+    <None Include="resources\Printer-icon1.png" />
+    <None Include="resources\recycle.png" />
+    <None Include="resources\refresh.png" />
+    <None Include="resources\report1.png" />
+    <None Include="resources\saoluu.png" />
+    <None Include="resources\save.png" />
+    <None Include="resources\splash-of-spring-backgrounds-wallpapaers.jpg" />
+    <None Include="resources\Sua.ico" />
+    <None Include="resources\Them.ico" />
+    <None Include="resources\thoat.png" />
+    <None Include="resources\Timkiem.ico" />
+    <None Include="resources\Truoc.ico" />
+    <None Include="resources\white.jpg" />
+    <None Include="resources\Xoa.ico" />
+    <None Include="resources\xoachuyenlop.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLHS.BUS\QLHS.BUS.csproj">
@@ -484,86 +527,49 @@
       <DependentUpon>QuanLyHocSinh1.mdf</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="resources\xoachuyenlop.png" />
-    <None Include="resources\Xoa.ico" />
-    <None Include="resources\39.png" />
-    <None Include="resources\348527.png" />
-    <None Include="resources\902759421.png" />
-    <None Include="resources\3485271.png" />
-    <None Include="resources\37.png" />
-    <None Include="resources\add.png" />
-    <None Include="resources\backGround.png" />
-    <None Include="resources\baoCaoDiem.jpg" />
+    <Content Include="resources\Address Book.ico" />
     <Content Include="resources\books copy.png" />
     <Content Include="resources\cal-ico copy.png" />
     <Content Include="resources\Calendar-icon.png" />
-    <None Include="resources\Chonanh.ico" />
-    <None Include="resources\chuyenlop.png" />
     <Content Include="resources\class.png" />
     <Content Include="resources\classroom.jpg" />
     <Content Include="resources\classroom_icon.png" />
     <Content Include="resources\class_room_icon.jpg" />
-    <None Include="resources\closephanlop.png" />
-    <None Include="resources\connection.png" />
     <Content Include="resources\DangXuat.png" />
-    <None Include="resources\danhsach.ico" />
-    <None Include="resources\delete.png" />
-    <None Include="resources\diemBC.png" />
     <Content Include="resources\DoiMatKhau.png" />
-    <None Include="resources\Dongy.ico" />
     <Content Include="resources\education-edutainment-2.png" />
-    <None Include="resources\Employee Add copy.png" />
-    <None Include="resources\exit.png" />
-    <None Include="resources\good-result-md.png" />
     <Content Include="resources\HuongDan.png" />
-    <None Include="resources\Huybo.ico" />
     <Content Include="resources\imagdes copy.png" />
     <Content Include="resources\images copy.png" />
     <Content Include="resources\imdages copy.png" />
     <Content Include="resources\ismages copy.png" />
-    <None Include="resources\learning-prv.png" />
-    <None Include="resources\Luulai.ico" />
-    <None Include="resources\line_right.png" />
-    <None Include="resources\line_horizal.png" />
-    <None Include="resources\luuchuyenlop.png" />
-    <None Include="resources\log.png" />
+    <Content Include="resources\line_bottom.png" />
+    <Content Include="resources\line_left.png" />
+    <Content Include="resources\line_top.png" />
     <Content Include="resources\log-2.png" />
     <Content Include="resources\notus-icon.png" />
-    <None Include="resources\phuchoi.png" />
-    <None Include="resources\no_image_found.jpg" />
     <Content Include="resources\picture1_02.gif" />
     <Content Include="resources\picture1_03.gif" />
     <Content Include="resources\picture2.gif" />
     <Content Include="resources\preferences-desktop-personal.png" />
-    <None Include="resources\saoluu.png" />
-    <None Include="resources\save.png" />
-    <None Include="resources\refresh.png" />
-    <None Include="resources\report1.png" />
-    <None Include="resources\recycle.png" />
-    <None Include="resources\Printer-icon1.png" />
+    <Content Include="resources\Printer-icon.png" />
     <Content Include="resources\school.png" />
     <Content Include="resources\Search-Male-User.png" />
     <Content Include="resources\Search.png" />
     <Content Include="resources\search_user.png" />
-    <None Include="resources\splash-of-spring-backgrounds-wallpapaers.jpg" />
     <Content Include="resources\student_icon copy.png" />
-    <None Include="resources\Sua.ico" />
     <Content Include="resources\Teacher-icon.png" />
     <Content Include="resources\Teacher_Female_Dark.png" />
     <Content Include="resources\ThamSo.png" />
-    <None Include="resources\thoat.png" />
-    <None Include="resources\Them.ico" />
     <Content Include="resources\ThongTin.png" />
-    <None Include="resources\Truoc.ico" />
-    <None Include="resources\Timkiem.ico" />
     <Content Include="resources\Untitled-d.png" />
-    <None Include="resources\white.jpg" />
     <Content Include="resources\win7.png" />
     <Content Include="resources\win8.png" />
     <Content Include="resources\winBlack.png" />
     <Content Include="resources\winBlue.png" />
     <Content Include="resources\winSilver.png" />
     <Content Include="resources\winVistaClass.png" />
+    <Content Include="resources\xemdiem.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
